--- a/todolist/src/public/index.html
+++ b/todolist/src/public/index.html
@@ -27,5 +27,8 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+    <script src="/dist/vendor.js"></script>
+    <script src="/dist/App.js"></script>
+    <script src="/dist/index.js"></script>
   </body>
 </html>
